fix: allow content overflow in generic Button (#3167)

--- a/src/components/Button/styling/Button.scss
+++ b/src/components/Button/styling/Button.scss
@@ -4,7 +4,6 @@
   .str-chat__button {
     @include utils.button-reset;
     position: relative; /* creates positioning context for pseudo ::after overlay */
-    overflow: hidden;
     white-space: nowrap;
     cursor: pointer;
 
